# CSCI-4470

./: .gitignore  index.md
labs/lab01/: .lab01.md.swp  .report.md.swp  lab01.md  submission.txt
labs/lab02/: lab02.md  submission.txt
labs/lab03/: lab02.md  lab03.md  submission.txt
labs/lab04/: lab04.md  submission.txt
labs/lab05/: lab05.md  submission.txt
labs/lab05/Part1/Step1/: CMakeLists.txt  tutorial.cxx
labs/lab05/Part1/Step4/: CMakeLists.txt  output.txt
labs/lab05/Part1/Step5/MathFunctions/: CMakeLists.txt  mysqrt.cxx
labs/lab05/Part2/: CMakeLists.txt  Makefile
labs/lab06/: lab06.md  plot_words.py  submission.txt
labs/lab08/: lab08.md  submission.txt
labs/lab09/: lab09.md  submission.txt
labs/lab10/: lab10.md  submission.txt
labs/lab11/: checkpoint2.py  checkpoint3.py  lab11.md  prepare.py  submission.txt
